--- a/Paginas/Mojito.html
+++ b/Paginas/Mojito.html
@@ -4,11 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/Recursos/Elementos/Estilos.css" />
-    <title>Pisco Sour</title>
+    <title>Mojito</title>
   </head>
   <body>
     <div>
-      <h2>Pisco Sour</h2>
+      <h2>Mojito</h2>
 
       <h3>Denominacion de origen</h3>
       <p>
