--- a/Paginas/Mojito.html
+++ b/Paginas/Mojito.html
@@ -27,8 +27,8 @@
           <th>Cristaleria</th>
           <th>Metodo</th>
         </tr>
-        <td>Pisco Sour</td>
-        <td>Pisco</td>
+        <td>Mojito</td>
+        <td>Ron</td>
         <td>Limon sutil, Jarabe de goma</td>
         <td>Copa flauta</td>
         <td>Batido</td>
