--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
         alt="Problemas al cargar imagen"
       />
       <p>¿Quienes somos?</p>
-      <a href="Contacto.html">Contacto y sugerencias</a>
+      <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
     </div>
     <div>
       <h1>Nuestro proposito</h1>
@@ -96,9 +96,9 @@
         alt="Problemas al cargar imagen"
       />
       <br />
-      <a href="Index.html">Inicio</a>
+      <a href="/index.html">Inicio</a>
       <p>¿Quienes somos?</p>
-      <a href="Contacto.html">Contacto y sugerencias</a>
+      <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
     </footer>
   </body>
 </html>
