--- a/Paginas/PiscoSour.html
+++ b/Paginas/PiscoSour.html
@@ -66,9 +66,9 @@
         alt="Problemas al cargar imagen"
       />
       <br />
-      <a href="Index.html">Inicio</a>
+      <a href="/index.html">Inicio</a>
       <p>¿Quienes somos?</p>
-      <a href="Contacto.html">Contacto y sugerencias</a>
+      <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
       <p>Direccion</p>
     </footer>
   </body>
