--- a/Index.html
+++ b/Index.html
@@ -33,6 +33,11 @@
         las bebidas que realiza.
       </p>
       <p>
+        -Un bartender es un profesional de la barra, sabe de coctelería,
+        administración de la barra, servicio al cliente y crea experiencias con
+        las bebidas que realiza.
+      </p>
+      <p>
         -Es una persona que atiende detrás de la barra a los clientes en un
         hotel, crucero, antro, discoteca y otros lugares con bar.
       </p>
