--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         administración de la barra, servicio al cliente y crea experiencias con
         las bebidas que realiza.
       </p>
+      <p>Estoy haciendo algo</p>
       <p>
         -Es una persona que atiende detrás de la barra a los clientes en un
         hotel, crucero, antro, discoteca y otros lugares con bar.
