--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
         alt="Problemas al cargar imagen"
       />
       <br />
-      <a href="Index.html">Inicio</a>
+      <a href="/index.html">Inicio</a>
       <p>¿Quienes somos?</p>
-      <a href="Contacto.html">Contacto y sugerencias</a>
+      <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
     </footer>
   </body>
 </html>
