--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 <body>
   <div>
     <img src="/Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" />
+    <br>
+    <a href="/index.html">Inicio</a>
     <p>¿Quienes somos?</p>
     <a href="Contacto.html">Contacto y sugerencias</a>
+    <hr>
   </div>
   <div>
     <h1>Nuestro proposito</h1>
