--- a/Paginas/mojito.html
+++ b/Paginas/mojito.html
@@ -19,7 +19,7 @@
       En la actualidad, solamente cuatro países tienen una denominación de origen para el ron en el Caribe, con nombres
       distintos, pero un mismo fin. Estos países son: Cuba, Guatemala, Martinica y Venezuela.
     </p>
-    <H3>Origen</H3>
+    <h3>Origen</h3>
     <p>
       Origen del mojito. Hablamos de Cuba
       Cuba es sin duda alguna la cuna del mojito, a pesar de que el origen exacto de este cóctel clásico es siempre
