--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <br>
     <a href="/index.html">Inicio</a>
     <p>¿Quienes somos?</p>
-    <a href="Contacto.html">Contacto y sugerencias</a>
+    <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
     <hr>
   </div>
   <div>
