--- a/Paginas/contacto.html
+++ b/Paginas/contacto.html
@@ -49,7 +49,7 @@
       <img src="/Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
       <br />
       <a href="/index.html">Inicio</a>
-      <p>¿Quienes somos?</p>
+      <a href="/QuienesSomos">¿Quienes somos?</a>
       <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
       <p>Direccion</p>
     </footer>
