--- a/Paginas/quieneSomos.html
+++ b/Paginas/quieneSomos.html
@@ -10,5 +10,13 @@
     <h1>¿Quienes somos?</h1>
 
     <p></p>
+    <footer>
+        <img src="/Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
+        <br />
+        <a href="/index.html">Inicio</a>
+        <a href="/QuienesSomos">¿Quienes somos?</a>
+        <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
+        <p>Direccion</p>
+      </footer>
 </body>
 </html>
