--- a/Paginas/mojito.html
+++ b/Paginas/mojito.html
@@ -99,7 +99,7 @@
     <img src="/Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
     <br />
     <a href="/index.html">Inicio</a>
-    <p>¿Quienes somos?</p>
+    <a href="/QuienesSomos">¿Quienes somos?</a>
     <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
     <p>Direccion</p>
   </footer>
