--- a/Paginas/piscoSour.html
+++ b/Paginas/piscoSour.html
@@ -66,7 +66,7 @@
     <img src="/Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
     <br />
     <a href="Index.html">Inicio</a>
-    <p>¿Quienes somos?</p>
+    <a href="/QuienesSomos">¿Quienes somos?</a>
     <a href="Contacto.html">Contacto y sugerencias</a>
     <p>Direccion</p>
   </footer>
