--- a/index.html
+++ b/index.html
@@ -22,16 +22,23 @@
 -->
 
   <body>
-    <div>
+    <div align="center">
       <img
         src="/Recursos/Imagenes/BANNERCF.png"
-        alt="Problemas al cargar imagen"
+        alt="Problemas al cargar imagen" width="400"
       />
       <a href="/index.html">Inicio</a>
       <a href="/QuienesSomos">¿Quienes somos?</a>
       <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
-      <hr />
+      <img
+        src="/Recursos/Imagenes/BANNERCF.png"
+        alt="Problemas al cargar imagen" width="400"
+      />
+      <hr>
     </div>
+    <!--
+      Aqui va el navbar
+    -->
     <div>
       <h1>Nuestro proposito</h1>
       <p>
