--- a/Paginas/piscoSour.html
+++ b/Paginas/piscoSour.html
@@ -64,9 +64,9 @@
   <hr />
   <footer>
     <img src="/Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
-    <a href="Index.html">Inicio</a>
-    <a href="/QuienesSomos">¿Quienes somos?</a>
-    <a href="Contacto.html">Contacto y sugerencias</a>
+    <a href="/index.html">Inicio</a>
+    <a href="/Paginas/quieneSomos.html">¿Quienes somos?</a>
+    <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
   </footer>
 </body>
 
