--- a/index.html
+++ b/index.html
@@ -22,18 +22,14 @@
 -->
 
   <body>
-    <div align="center">
+    <div>
       <img
         src="/Recursos/Imagenes/BANNERCF.png"
         alt="Problemas al cargar imagen" width="400"
       />
       <a href="/index.html">Inicio</a>
-      <a href="/QuienesSomos">¿Quienes somos?</a>
+      <a href="/Paginas/quieneSomos.html">¿Quienes somos?</a>
       <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
-      <img
-        src="/Recursos/Imagenes/BANNERCF.png"
-        alt="Problemas al cargar imagen" width="400"
-      />
       <hr>
     </div>
     <!--
@@ -115,7 +111,7 @@
         alt="Problemas al cargar imagen"
       />
       <a href="/index.html">Inicio</a>
-      <a href="/QuienesSomos">¿Quienes somos?</a>
+      <a href="/Paginas/quieneSomos.html">¿Quienes somos?</a>
       <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
     </footer>
   </body>
