--- a/Paginas/contacto.html
+++ b/Paginas/contacto.html
@@ -56,7 +56,7 @@
         alt="Problemas al cargar imagen"
       />
       <a href="/index.html">Inicio</a>
-      <a href="/QuienesSomos">¿Quienes somos?</a>
+      <a href="/Paginas/quieneSomos.html">¿Quienes somos?</a>
       <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
     </footer>
   </body>
