--- a/Paginas/mojito.html
+++ b/Paginas/mojito.html
@@ -98,7 +98,7 @@
   <footer>
     <img src="/Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
     <a href="/index.html">Inicio</a>
-    <a href="/QuienesSomos">¿Quienes somos?</a>
+    <a href="/Paginas/quieneSomos.html">¿Quienes somos?</a>
     <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
   </footer>
 </body>
