--- a/Paginas/quieneSomos.html
+++ b/Paginas/quieneSomos.html
@@ -14,7 +14,7 @@
         <img src="/Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
         <br />
         <a href="/index.html">Inicio</a>
-        <a href="/QuienesSomos">¿Quienes somos?</a>
+        <a href="/Paginas/quieneSomos.html">¿Quienes somos?</a>
         <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
         <p>Direccion</p>
       </footer>
