--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/Recursos/Elementos/Estilos.css" />
+    <link rel="stylesheet" href="Recursos/Elementos/Estilos.css" />
     <title>Cocktail Factory</title>
   </head>
   <!--
@@ -24,12 +24,12 @@
   <body>
     <div>
       <img
-        src="/Recursos/Imagenes/BANNERCF.png"
+        src="Recursos/Imagenes/BANNERCF.png"
         alt="Problemas al cargar imagen" width="400"
       />
-      <a href="/index.html">Inicio</a>
-      <a href="/Paginas/quieneSomos.html">¿Quienes somos?</a>
-      <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
+      <a href="index.html">Inicio</a>
+      <a href="Paginas/quieneSomos.html">¿Quienes somos?</a>
+      <a href="Paginas/contacto.html">Contacto y sugerencias</a>
       <hr>
     </div>
     <!--
@@ -94,8 +94,8 @@
     <div>
       <h2>Cocteles para preparar</h2>
       <ul>
-        <li><a href="/Paginas/PiscoSour.html">Pisco</a></li>
-        <li><a href="/Paginas/mojito.html">Mojito</a></li>
+        <li><a href="Paginas/PiscoSour.html">Pisco</a></li>
+        <li><a href="Paginas/mojito.html">Mojito</a></li>
         <li>Pisco Sour Peruano</li>
         <li>Margarita</li>
         <li>Martini</li>
@@ -110,9 +110,9 @@
         src="/Recursos/Imagenes/LOGOCF.jpg"
         alt="Problemas al cargar imagen"
       />
-      <a href="/index.html">Inicio</a>
-      <a href="/Paginas/quieneSomos.html">¿Quienes somos?</a>
-      <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
+      <a href="index.html">Inicio</a>
+      <a href="Paginas/quieneSomos.html">¿Quienes somos?</a>
+      <a href="Paginas/contacto.html">Contacto y sugerencias</a>
     </footer>
   </body>
 </html>
