--- a/Paginas/contacto.html
+++ b/Paginas/contacto.html
@@ -11,7 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/Recursos/Elementos/Estilos.css" />
+    <link rel="stylesheet" href="Recursos/Elementos/Estilos.css" />
     <title>Contacto</title>
   </head>
 
@@ -52,12 +52,12 @@
       <hr />
     <footer>
       <img
-        src="/Recursos/Imagenes/LOGOCF.jpg"
+        src="Recursos/Imagenes/LOGOCF.jpg"
         alt="Problemas al cargar imagen"
       />
-      <a href="/index.html">Inicio</a>
-      <a href="/Paginas/quieneSomos.html">¿Quienes somos?</a>
-      <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
+      <a href="index.html">Inicio</a>
+      <a href="Paginas/quieneSomos.html">¿Quienes somos?</a>
+      <a href="Paginas/contacto.html">Contacto y sugerencias</a>
     </footer>
   </body>
 </html>
