--- a/Paginas/quieneSomos.html
+++ b/Paginas/quieneSomos.html
@@ -11,11 +11,11 @@
 
     <p></p>
     <footer>
-        <img src="/Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
+        <img src="Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
         <br />
-        <a href="/index.html">Inicio</a>
-        <a href="/Paginas/quieneSomos.html">¿Quienes somos?</a>
-        <a href="/Paginas/contacto.html">Contacto y sugerencias</a>
+        <a href="index.html">Inicio</a>
+        <a href="Paginas/quieneSomos.html">¿Quienes somos?</a>
+        <a href="Paginas/contacto.html">Contacto y sugerencias</a>
         <p>Direccion</p>
       </footer>
 </body>
