--- a/Paginas/mojito.html
+++ b/Paginas/mojito.html
@@ -4,7 +4,14 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="Recursos/Elementos/Estilos.css" />
+  <!-- CSS only -->
+  <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+  crossorigin="anonymous"
+/>
+  <link rel="stylesheet" href="../Recursos/Elementos/Estilos.css" />
   <title>Mojito</title>
 </head>
 
@@ -12,7 +19,7 @@
   <div>
     <h2>Mojito</h2>
 
-    <img src="Recursos/Imagenes/Mojito.jpg" alt="Probl emas al cargar imagen">
+    <img src="../Recursos/Imagenes/Mojito.jpg" alt="Probl emas al cargar imagen">
 
     <h3>Denominacion de origen</h3>
     <p>
@@ -96,10 +103,10 @@
   </div>
   <hr />
   <footer>
-    <img src="Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
-    <a href="index.html">Inicio</a>
-    <a href="Paginas/quieneSomos.html">¿Quienes somos?</a>
-    <a href="Paginas/contacto.html">Contacto y sugerencias</a>
+    <img src="../Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
+    <a href="../index.html">Inicio</a>
+    <a href="quieneSomos.html">¿Quienes somos?</a>
+    <a href="contacto.html">Contacto y sugerencias</a>
   </footer>
 </body>
 
