--- a/Paginas/quieneSomos.html
+++ b/Paginas/quieneSomos.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../Recursos/Elementos/Estilos.css" />
     <title>¿Quienes somos?</title>
 </head>
 <body>
@@ -11,12 +19,10 @@
 
     <p></p>
     <footer>
-        <img src="Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
-        <br />
-        <a href="index.html">Inicio</a>
-        <a href="Paginas/quieneSomos.html">¿Quienes somos?</a>
-        <a href="Paginas/contacto.html">Contacto y sugerencias</a>
-        <p>Direccion</p>
+        <img src="../Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
+        <a href="../index.html">Inicio</a>
+        <a href="quieneSomos.html">¿Quienes somos?</a>
+        <a href="contacto.html">Contacto y sugerencias</a>
       </footer>
 </body>
 </html>
