--- a/index.html
+++ b/index.html
@@ -25,16 +25,15 @@
     <div>
       <img
         src="Recursos/Imagenes/BANNERCF.png"
-        alt="Problemas al cargar imagen" width="400"
+        alt="Problemas al cargar imagen"
+        width="400"
       />
       <a href="index.html">Inicio</a>
       <a href="Paginas/quieneSomos.html">¿Quienes somos?</a>
       <a href="Paginas/contacto.html">Contacto y sugerencias</a>
-      <hr>
+      <hr />
     </div>
-    <!--
-      Aqui va el navbar
-    -->
+
     <div>
       <h1>Nuestro proposito</h1>
       <p>
