--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="Recursos/Elementos/Estilos.css" />
     <title>Cocktail Factory</title>
   </head>
@@ -22,17 +28,31 @@
 -->
 
   <body>
-    <div>
-      <img
-        src="Recursos/Imagenes/BANNERCF.png"
-        alt="Problemas al cargar imagen"
-        width="400"
-      />
-      <a href="index.html">Inicio</a>
-      <a href="Paginas/quieneSomos.html">¿Quienes somos?</a>
-      <a href="Paginas/contacto.html">Contacto y sugerencias</a>
-      <hr />
-    </div>
+    <nav class="navbar navbar-expand-sm">
+      <div class="container-fluid">
+        <!-- Links -->
+        <img
+          src="Recursos/Imagenes/BANNERCF.png"
+          alt="Problemas al cargar imagen"
+          width="400"
+        />
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Paginas/quieneSomos.html"
+              >¿Quienes somos?</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Paginas/contacto.html"
+              >Contacto y sugerencias</a
+            >
+          </li>
+        </ul>
+      </div>
+    </nav>
 
     <div>
       <h1>Nuestro proposito</h1>
@@ -106,8 +126,9 @@
     <hr />
     <footer>
       <img
-        src="Recursos/Imagenes/LOGOCF.jpg"
+        src="Recursos/Imagenes/BANNERCF.png"
         alt="Problemas al cargar imagen"
+        width="400"
       />
       <a href="index.html">Inicio</a>
       <a href="Paginas/quieneSomos.html">¿Quienes somos?</a>
