--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
   </head>
   <!--
     Notas mentales
-    Agregar imagenes
-    Agregar mas estilos
-    Agregar bootstrap
-    Agregar Navbar con 
 -->
 
   <body>
@@ -53,90 +49,93 @@
         </ul>
       </div>
     </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <h1>Nuestro proposito</h1>
+          <p>
+            Con nosotros aprenderas los terminos que se usan detras de la barra
+            y ademas aprenderas a preparar cocteles basicos y avanzados.
+          </p>
+          <h2>El bartender</h2>
+          <p>
+            -Un bartender es un profesional de la barra, sabe de coctelería,
+            administración de la barra, servicio al cliente y crea experiencias
+            con las bebidas que realiza.
+          </p>
+          <p>
+            -Es una persona que atiende detrás de la barra a los clientes en un
+            hotel, crucero, antro, discoteca y otros lugares con bar.
+          </p>
+          <p>
+            -El bartender es un concepto más moderno que involucra más servicio
+            al cliente, una mejor atención detrás de la barra.
+          </p>
+          <p>
+            -También es diferente a un mixólogo, que es un químico de la barra,
+            un diseñador de bebidas. El mixólogo experimenta más, diseña nuevos
+            tragos.
+          </p>
+          <p>
+            -Algunos mixólogos son bartenders. Digamos que la mixología es una
+            especialización de la profesión de bartender. Como un dermatólogo es
+            una especialidad médica, la mixología es una especialidad de un
+            bartender.
+          </p>
+        </div>
 
-    <div class="row">
-      <div class="col-sm-6">
-        <h1>Nuestro proposito</h1>
-        <p>
-          Con nosotros aprenderas los terminos que se usan detras de la barra y
-          ademas aprenderas a preparar cocteles basicos y avanzados.
-        </p>
-        <h2>El bartender</h2>
-        <p>
-          -Un bartender es un profesional de la barra, sabe de coctelería,
-          administración de la barra, servicio al cliente y crea experiencias
-          con las bebidas que realiza.
-        </p>
-        <p>
-          -Es una persona que atiende detrás de la barra a los clientes en un
-          hotel, crucero, antro, discoteca y otros lugares con bar.
-        </p>
-        <p>
-          -El bartender es un concepto más moderno que involucra más servicio al
-          cliente, una mejor atención detrás de la barra.
-        </p>
-        <p>
-          -También es diferente a un mixólogo, que es un químico de la barra, un
-          diseñador de bebidas. El mixólogo experimenta más, diseña nuevos
-          tragos.
-        </p>
-        <p>
-          -Algunos mixólogos son bartenders. Digamos que la mixología es una
-          especialización de la profesión de bartender. Como un dermatólogo es
-          una especialidad médica, la mixología es una especialidad de un
-          bartender.
-        </p>
+        <div class="col-sm-6">
+          <img
+            class="img-fluid"
+            src="/Recursos/Imagenes/Barman.jpg"
+            alt="Barman"
+          />
+        </div>
       </div>
-
-      <div class="col-sm-6">
-        <img
-          class="img-fluid"
-          src="/Recursos/Imagenes/Barman.jpg"
-          alt="Barman"
-        />
+      <div class="row">
+        <div class="col-sm-6">
+          <img
+            class="img-fluid"
+            src="/Recursos/Imagenes/mixologia.jpg"
+            alt="mixologia"
+          />
+        </div>
+        <div class="col-sm-6">
+          <h2>¿Que es la mixología?</h2>
+          <p>
+            La mixología se volvió un término utilizado más comúnmente en los
+            últimos años y generalmente utilizado en un grado más alto del
+            estudio de mezclar cocteles y bebidas, que simplemente el hacer las
+            acciones diarias de un bartender.
+          </p>
+          <p>
+            Esta definición y su uso es uno de los muchos debates dentro de la
+            comunidad de bartenders, usualmente por la impresión que deja que un
+            mixólogo es mejor y más habilidoso que el bartender. Sin embargo,
+            esto no es necesario. Ni es mejor que el otro y cada uno requiere de
+            diferentes técnicas y habilidades.
+          </p>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-sm-6">
-        <img
-          class="img-fluid"
-          src="/Recursos/Imagenes/mixologia.jpg"
-          alt="mixologia"
-        />
-      </div>
-      <div class="col-sm-6">
-        <h2>¿Que es la mixología?</h2>
-        <p>
-          La mixología se volvió un término utilizado más comúnmente en los
-          últimos años y generalmente utilizado en un grado más alto del estudio
-          de mezclar cocteles y bebidas, que simplemente el hacer las acciones
-          diarias de un bartender.
-        </p>
-        <p>
-          Esta definición y su uso es uno de los muchos debates dentro de la
-          comunidad de bartenders, usualmente por la impresión que deja que un
-          mixólogo es mejor y más habilidoso que el bartender. Sin embargo, esto
-          no es necesario. Ni es mejor que el otro y cada uno requiere de
-          diferentes técnicas y habilidades.
-        </p>
-        <h2>¿Qué es un coctel?</h2>
-        <p>
-          Un cóctel o coctel (del inglés cocktail)​ es una preparación a base de
-          una mezcla de diferentes bebidas, que contiene por lo general dos o
-          más tipos de bebidas, aunque algunas de ellas pueden ser bebidas no
-          alcohólicas, a base de ingredientes como jugos, frutas, miel, leche o
-          crema, especias, etc. También son ingredientes comunes de los cócteles
-          las bebidas carbonatadas o refrescos sin alcohol, la soda y el agua
-          tónica. Los cócteles sin alcohol son popularmente llamados cócteles
-          virgen o mócteles. En el ámbito comercial, estas bebidas son servidas
-          por personas llamadas barman (del inglés bartender).
-        </p>
-      </div>
+    <div>
+      <h2>¿Qué es un coctel?</h2>
+      <p>
+        Un cóctel o coctel (del inglés cocktail)​ es una preparación a base
+        de una mezcla de diferentes bebidas, que contiene por lo general dos
+        o más tipos de bebidas, aunque algunas de ellas pueden ser bebidas
+        no alcohólicas, a base de ingredientes como jugos, frutas, miel,
+        leche o crema, especias, etc. También son ingredientes comunes de
+        los cócteles las bebidas carbonatadas o refrescos sin alcohol, la
+        soda y el agua tónica. Los cócteles sin alcohol son popularmente
+        llamados cócteles virgen o mócteles. En el ámbito comercial, estas
+        bebidas son servidas por personas llamadas barman (del inglés
+        bartender).
+      </p>
     </div>
-    <div></div>
     <div>
       <h2>Cocteles para preparar</h2>
-      <ul>
+      <ul class="list-group">
         <li><a href="Paginas/PiscoSour.html">Pisco</a></li>
         <li><a href="Paginas/mojito.html">Mojito</a></li>
         <li>Pisco Sour Peruano</li>
