--- a/Paginas/contacto.html
+++ b/Paginas/contacto.html
@@ -55,7 +55,7 @@
     <img src="../Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
     <a href="../index.html">Inicio</a>
     <a href="quieneSomos.html">¿Quienes somos?</a>
-    <a href="contacto.html">Contacto y sugerencias</a>
+    <a href="#">Contacto y sugerencias</a>
   </footer>
 </body>
 
