--- a/Paginas/quieneSomos.html
+++ b/Paginas/quieneSomos.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -19,7 +19,6 @@
 <body>
   <h1>¿Quienes somos?</h1>
 
-  <p></p>
   <footer>
     <img src="../Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
     <a href="../index.html">Inicio</a>
