--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
   <link rel="stylesheet" href="Recursos/Elementos/Estilos.css" />
   <title>Cocktail Factory</title>
 </head>
-<!--
-    Notas mentales
--->
 
 <body>
 
@@ -120,6 +117,7 @@
               <ul class="list-group">
                 <li><a href="Paginas/PiscoSour.html">Pisco</a></li>
                 <li>Pisco Sour Peruano</li>
+                <li>Chilcano</li>
               </ul>
             </div>
           </div>
@@ -129,7 +127,9 @@
             <h5>Preparaciones con Whisky</h5>
             <div class="card-body">
               <ul class="list-group">
-
+                <li>Manhattan</li>
+                <li>Rusty Nail</li>
+                <li>Old Fashioned</li>
               </ul>
             </div>
           </div>
@@ -139,7 +139,9 @@
             <h5>Preparaciones con Vodka</h5>
             <div class="card-body">
               <ul class="list-group">
-
+                <li>moscow mule</li>
+                <li>Caipiroska</li>
+                <li>Cosmopolitan</li>
               </ul>
             </div>
           </div>
@@ -164,7 +166,8 @@
             <div class="card-body">
               <ul class="list-group">
                 <li>Martini</li>
-                <li>Margarita</li>
+                <li>Tom Collins</li>
+                <li>Negroni</li>
               </ul>
             </div>
           </div>
@@ -174,13 +177,15 @@
             <h5>Preparaciones con Tequila</h5>
             <div class="card-body">
               <ul class="list-group">
-
+                <li>Margarita</li>
+                <li>Tequila Sunrise</li>
+                <li>Paloma</li>
               </ul>
             </div>
           </div>
         </div>
       </div>
-
+      <!--Fin Cards-->
       <footer>
         <nav class="navbar navbar-expand-sm">
           <div class="container-fluid">
