--- a/Paginas/mojito.html
+++ b/Paginas/mojito.html
@@ -23,7 +23,7 @@
         <img src="../Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Inicio</a>
+            <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="quieneSomos.html">¿Quienes somos?</a>
@@ -126,10 +126,22 @@
     </div>
     <hr />
     <footer>
-      <img src="../Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
-      <a href="../index.html">Inicio</a>
-      <a href="quieneSomos.html">¿Quienes somos?</a>
-      <a href="contacto.html">Contacto y sugerencias</a>
+      <nav class="navbar navbar-expand-sm">
+        <div class="container-fluid">
+          <img src="../Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="quieneSomos.html">¿Quienes somos?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto y sugerencias</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </footer>
   </div>
 </body>
