--- a/Paginas/mojito.html
+++ b/Paginas/mojito.html
@@ -15,6 +15,11 @@
   <link rel="stylesheet" href="../Recursos/Elementos/Estilos.css" />
   <title>Mojito</title>
 </head>
+<!--Pendientes
+  - agregar row col
+  - 
+  -
+-->
 
 <body>
   <div class="container">
