--- a/Paginas/piscoSour.html
+++ b/Paginas/piscoSour.html
@@ -15,6 +15,11 @@
   <link rel="stylesheet" href="../Recursos/Elementos/Estilos.css" />
   <title>Pisco Sour</title>
 </head>
+<!--Pendientes
+  - agregar imagen
+  - agregar row
+  -
+-->
 
 <body>
   <div class="container">
