--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <link rel="stylesheet" href="Recursos/Elementos/Estilos.css" />
   <title>Cocktail Factory</title>
 </head>
+<!--Pendientes
+  - cambiar color de fondo de las cards
+  - eliminar los puntos de la lista de las cards
+  -
+-->
 
 <body>
 
