--- a/Paginas/quieneSomos.html
+++ b/Paginas/quieneSomos.html
@@ -15,16 +15,54 @@
   <link rel="stylesheet" href="../Recursos/Elementos/Estilos.css" />
   <title>¿Quienes somos?</title>
 </head>
+<!--Pendientes
+  - pagina completa pendiente
+  -
+  -
+-->
 
 <body>
-  <h1>¿Quienes somos?</h1>
+  <div class="container">
+    <nav class="navbar navbar-expand-sm">
+      <div class="container-fluid">
+        <img src="/Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Paginas/quieneSomos.html">¿Quienes somos?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Paginas/contacto.html">Contacto y sugerencias</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div>
+      <h1>Pagina en construccion</h1>
+      <h1>¿Quienes somos?</h1>
+    </div>
 
-  <footer>
-    <img src="../Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
-    <a href="../index.html">Inicio</a>
-    <a href="quieneSomos.html">¿Quienes somos?</a>
-    <a href="contacto.html">Contacto y sugerencias</a>
-  </footer>
+    <footer>
+      <nav class="navbar navbar-expand-sm">
+        <div class="container-fluid">
+          <img src="/Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Paginas/quieneSomos.html">¿Quienes somos?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Paginas/contacto.html">Contacto y sugerencias</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </footer>
+  </div>
 </body>
 
 </html>
