--- a/Paginas/quieneSomos.html
+++ b/Paginas/quieneSomos.html
@@ -28,13 +28,13 @@
         <img src="/Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Inicio</a>
+            <a class="nav-link" href="/index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Paginas/quieneSomos.html">¿Quienes somos?</a>
+            <a class="nav-link" href="#">¿Quienes somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Paginas/contacto.html">Contacto y sugerencias</a>
+            <a class="nav-link" href="contacto.html">Contacto y sugerencias</a>
           </li>
         </ul>
       </div>
@@ -50,13 +50,13 @@
           <img src="/Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Inicio</a>
+              <a class="nav-link" href="/index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Paginas/quieneSomos.html">¿Quienes somos?</a>
+              <a class="nav-link" href="#">¿Quienes somos?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Paginas/contacto.html">Contacto y sugerencias</a>
+              <a class="nav-link" href="contacto.html">Contacto y sugerencias</a>
             </li>
           </ul>
         </div>
