--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <title>Cocktail Factory</title>
 </head>
 <!--Pendientes
-  - cambiar color de fondo de las cards
-  - eliminar los puntos de la lista de las cards
+  - 
+  - 
   -
 -->
 
@@ -78,7 +78,7 @@
         <img class="img-fluid" src="/Recursos/Imagenes/Barman.jpg" alt="Barman" />
       </div>
     </div>
-    <div class="row">
+    <div class="row py-3">
       <div class="col-sm-6">
         <img class="img-fluid" src="/Recursos/Imagenes/mixologia.jpg" alt="mixologia" />
       </div>
@@ -98,118 +98,119 @@
           diferentes técnicas y habilidades.
         </p>
       </div>
-      <div>
-        <h2>¿Qué es un coctel?</h2>
-        <p>
-          Un cóctel o coctel (del inglés cocktail)​ es una preparación a base
-          de una mezcla de diferentes bebidas, que contiene por lo general dos
-          o más tipos de bebidas, aunque algunas de ellas pueden ser bebidas
-          no alcohólicas, a base de ingredientes como jugos, frutas, miel,
-          leche o crema, especias, etc. También son ingredientes comunes de
-          los cócteles las bebidas carbonatadas o refrescos sin alcohol, la
-          soda y el agua tónica. Los cócteles sin alcohol son popularmente
-          llamados cócteles virgen o mócteles. En el ámbito comercial, estas
-          bebidas son servidas por personas llamadas barman (del inglés
-          bartender).
-        </p>
-      </div>
-      <!--Cards-->
-      <div class="row py-3">
-        <div class="col-4">
-          <div class="card" style="width:400px">
-            <h5>Preparaciones con Pisco</h5>
-            <div class="card-body">
-              <ul class="list-group">
-                <li><a href="Paginas/PiscoSour.html">Pisco</a></li>
-                <li>Pisco Sour Peruano</li>
-                <li>Chilcano</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="card" style="width:400px">
-            <h5>Preparaciones con Whisky</h5>
-            <div class="card-body">
-              <ul class="list-group">
-                <li>Manhattan</li>
-                <li>Rusty Nail</li>
-                <li>Old Fashioned</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="card" style="width:400px">
-            <h5>Preparaciones con Vodka</h5>
-            <div class="card-body">
-              <ul class="list-group">
-                <li>moscow mule</li>
-                <li>Caipiroska</li>
-                <li>Cosmopolitan</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row py-3">
-        <div class="col-4">
-          <div class="card" style="width:400px">
-            <h5>Preparaciones con Ron</h5>
-            <div class="card-body">
-              <ul class="list-group">
-                <li><a href="Paginas/mojito.html">Mojito</a></li>
-                <li>Caipirina</li>
-                <li>Piña colada</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="card" style="width:400px">
-            <h5>Preparaciones con Ginebra</h5>
-            <div class="card-body">
-              <ul class="list-group">
-                <li>Martini</li>
-                <li>Tom Collins</li>
-                <li>Negroni</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="card" style="width:400px">
-            <h5>Preparaciones con Tequila</h5>
-            <div class="card-body">
-              <ul class="list-group">
-                <li>Margarita</li>
-                <li>Tequila Sunrise</li>
-                <li>Paloma</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--Fin Cards-->
-      <footer>
-        <nav class="navbar navbar-expand-sm">
-          <div class="container-fluid">
-            <img src="Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Paginas/quieneSomos.html">¿Quienes somos?</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Paginas/contacto.html">Contacto y sugerencias</a>
-              </li>
+    </div>
+    <div>
+      <h2>¿Qué es un coctel?</h2>
+      <p>
+        Un cóctel o coctel (del inglés cocktail)​ es una preparación a base
+        de una mezcla de diferentes bebidas, que contiene por lo general dos
+        o más tipos de bebidas, aunque algunas de ellas pueden ser bebidas
+        no alcohólicas, a base de ingredientes como jugos, frutas, miel,
+        leche o crema, especias, etc. También son ingredientes comunes de
+        los cócteles las bebidas carbonatadas o refrescos sin alcohol, la
+        soda y el agua tónica. Los cócteles sin alcohol son popularmente
+        llamados cócteles virgen o mócteles. En el ámbito comercial, estas
+        bebidas son servidas por personas llamadas barman (del inglés
+        bartender).
+      </p>
+    </div>
+    <!--Cards-->
+    <div class="row py-3">
+      <div class="col-4">
+        <div class="card" style="width:auto;">
+          <h5>Preparaciones con Pisco</h5>
+          <div class="card-body">
+            <ul class="list-group">
+              <li><a href="Paginas/PiscoSour.html">Pisco</a></li>
+              <li>Pisco Sour Peruano</li>
+              <li>Chilcano</li>
             </ul>
           </div>
-        </nav>
-      </footer>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="card" style="width:auto;">
+          <h5>Preparaciones con Whisky</h5>
+          <div class="card-body">
+            <ul class="list-group">
+              <li>Manhattan</li>
+              <li>Rusty Nail</li>
+              <li>Old Fashioned</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="card" style="width:auto;">
+          <h5>Preparaciones con Vodka</h5>
+          <div class="card-body">
+            <ul class="list-group">
+              <li>moscow mule</li>
+              <li>Caipiroska</li>
+              <li>Cosmopolitan</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
+    <div class="row py-3">
+      <div class="col-4">
+        <div class="card" style="width:auto;">
+          <h5>Preparaciones con Ron</h5>
+          <div class="card-body">
+            <ul class="list-group">
+              <li><a href="Paginas/mojito.html">Mojito</a></li>
+              <li>Caipirina</li>
+              <li>Piña colada</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="card" style="width:auto;">
+          <h5>Preparaciones con Ginebra</h5>
+          <div class="card-body">
+            <ul class="list-group">
+              <li>Martini</li>
+              <li>Tom Collins</li>
+              <li>Negroni</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="card" style="width:auto;">
+          <h5>Preparaciones con Tequila</h5>
+          <div class="card-body">
+            <ul class="list-group">
+              <li>Margarita</li>
+              <li>Tequila Sunrise</li>
+              <li>Paloma</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--Fin Cards-->
+    <footer>
+      <nav class="navbar navbar-expand-sm">
+        <div class="container-fluid">
+          <img src="Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Paginas/quieneSomos.html">¿Quienes somos?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Paginas/contacto.html">Contacto y sugerencias</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </footer>
+  </div>
   </div>
 </body>
 
