--- a/Paginas/quieneSomos.html
+++ b/Paginas/quieneSomos.html
@@ -23,6 +23,7 @@
 
 <body>
   <div class="container">
+    <!--Navbar-->
     <nav class="navbar navbar-expand-sm">
       <div class="container-fluid">
         <img src="/Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
@@ -39,6 +40,7 @@
         </ul>
       </div>
     </nav>
+    <!--Fin Navbar-->
     <div>
       <h1>Pagina en construccion</h1>
       <h1>¿Quienes somos?</h1>
