--- a/Paginas/piscoSour.html
+++ b/Paginas/piscoSour.html
@@ -49,7 +49,9 @@
         efectos sociales y territoriales.
       </p>
     </div>
+    <!--Table-->
     <div>
+     
       <table class="table table-bordered">
         <tr>
           <th>Receta</th>
@@ -65,6 +67,7 @@
         <td>Batido</td>
       </table>
     </div>
+     <!--Table-->
     <div>
       <h2>Ingredientes</h2>
       <ul>
